--- a/index.html
+++ b/index.html
@@ -1,55 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>For You ❤️</title>
-  <style>
-    body {
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      max-width: 400px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-    }
-    h1 {
-      color: #ff4d6d;
-    }
-    p {
-      font-size: 16px;
-      color: #333;
-      line-height: 1.6;
-    }
-    .heart {
-      font-size: 30px;
-      animation: beat 1s infinite;
-    }
-    @keyframes beat {
-      0%,100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Hey love ❤️</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  margin: 0;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  font-family: 'Segoe UI', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.card {
+  background: white;
+  padding: 30px;
+  border-radius: 22px;
+  max-width: 420px;
+  text-align: left;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+  animation: fadeIn 1.6s ease;
+}
+
+h1 {
+  text-align: center;
+  color: #ff4d6d;
+  margin-bottom: 15px;
+  animation: pop 1s ease;
+}
+
+p {
+  color: #333;
+  font-size: 15.5px;
+  line-height: 1.8;
+  white-space: pre-line;
+  animation: slideUp 1.3s ease;
+}
+
+.signature {
+  margin-top: 20px;
+  text-align: right;
+  font-style: italic;
+  color: #ff4d6d;
+  animation: fadeIn 2s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.92); }
+  to { opacity: 1; transform: scale(1); }
+}
+
+@keyframes pop {
+  0% { transform: scale(0); }
+  100% { transform: scale(1); }
+}
+
+@keyframes slideUp {
+  from { opacity: 0; transform: translateY(35px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.heart {
+  position: absolute;
+  bottom: -30px;
+  font-size: 22px;
+  animation: float 7s linear infinite;
+  opacity: 0.8;
+}
+
+@keyframes float {
+  0% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(-120vh); opacity: 0; }
+}
+</style>
 </head>
+
 <body>
-  <div class="card">
-    <h1>Hey You ❤️</h1>
-    <p>
-      Shayad tumhe andaza bhi na ho,  
-      par tum meri har smile ki wajah ho.  
-      Main ye baat kabhi keh nahi paungi,  
-      bas itna jaan lo — tum bahut special ho 💗
-    </p>
-    <div class="heart">💖</div>
-    <p>— Someone who cares</p>
+
+<div class="card">
+  <h1>Hey love ❤️</h1>
+
+  <p>
+Kya likhu yrr🥹 i love youuuuuu alot yr 🥹  
+terko bta ne skti ye baat kyunki i know tu merse pyaar nahi krta aur agar bta diya to friendship tut skti hai 🫠 isliye kabhi nahi bataungi.  
+
+Tu itna acha h na yr, mera mann krta h bas terko hi dekhti rahu.  
+Seriously agar tu mere samne baitha ho pure din ke liye, to main pure din sirf tujhe hi dekhti rahu🥹  
+
+Mujhe fark nahi padta ki tere ache dino me main tere sath hu ya nahi,  
+par jab bhi tu thoda bhi low feel kare — I’m always here for you 🫶  
+
+Main chahti hu bas ki tu hamesha khush rahe, hamesha haste rahe ❤️  
+Tu mere liye bohot bohot important hai yr.  
+
+Pure din raat tere baare me hi sochti rehti hu,  
+kisi aur ke sath hoti hu tab bhi mann me tu hi chala hota hai🥹  
+
+Tere bina, tujhe dekhe bina kaise rahungi mujhe khud nahi pata🥹🫠  
+Pehle mujhe lagta tha ki tu bas friend jaisa pasand hai,  
+shayad roz baat hoti hai isliye attachment ho gayi hogi.  
+
+Par ek din jab maine tujhe dekha,  
+meri nazrein hatane ka mann hi nahi kar raha tha🥹  
+aur usi din mujhe realise ho gaya —  
+nahi yr, I genuinely love you 🥹❤️  
+
+Tu meri life me ho ya na ho,  
+par mere dil me hamesha rahega🥹  
+Aur ye feeling sach me bohot real hai.  
+
+Jaanti hu tu mujhse pyaar nahi karta,  
+phir bhi main move on nahi karna chahti🥹  
+Main puri life tujhe hi pyaar karna chahti hu 🫶  
+
+Aaj se kuch saal baad jab isko padhungi,  
+to khush houngi ki haan — jo bola tha wo aaj bhi waisa hi hai ❤️  
+
+One sided love ki baat hi kuch aur hoti hai yr.  
+Main tujhe khush dekh kar hi khush ho jaati hu 🌙  
+
+Pata hi nahi chala kab mujhe tujhse itna pyaar ho gaya 🥹❤️  
+Koi bhi pyaari reel aa jaye, main bas tujhe hi imagine karti hu 🩷  
+
+Tu itna pyara hai na yr,  
+bohot bohot bohot pyara lagta hai mujhe tu 🫠🫶  
+
+Soti hu to tere baare me soch kar soti hu,  
+uthti hu to pehla khyaal tera hi aata hai 🥹  
+
+Wo do din raat jo tere sath bitaye the,  
+aaj bhi yaad hain 🫠  
+Bohot ache din the wo 🫶  
+waise to tere sath har din acha tha,  
+par wo do din — the best ❤️  
+
+Main chahti hu jab tu apne liye koi partner choose kare,  
+wo bhi tujhe bohot pyaar kare 🫶  
+Mujhse shayad dekha na jaye,  
+par main selfish nahi hu 🥹  
+
+Jo bhi tujhe pyaar kare,  
+wo tujhe hamesha khush rakhe, tera khayal rakhe 🫶  
+
+Mera pyaar tere liye jaisa aaj hai,  
+waisa hi hamesha rahega —  
+kabhi kam nahi hoga, badh zaroor sakta hai 🫶  
+
+Meri har pyaar wali story, har note —  
+sirf tere liye hota hai.  
+Kaash tu samajh pata kitna pyaar karti hu main 🥹  
+
+Shayad tujhe kabhi pata bhi na chale,  
+par koi baat nahi 🩷  
+
+Mann karta hai bas tera haath pakad ke tere sath ghumti rahu,  
+kahin baith ke sirf tujhe dekhti rahu 🥹  
+par jaanti hu ye possible nahi hai ❤️‍🩹  
+
+Tujhe bohot zor se hug karne ka mann karta hai 🥹  
+par bol nahi sakti 🫠  
+
+Kaash tu bhi mujhe usi nazar se dekhta,  
+jis nazar se main tujhe dekhti hu 🫠  
+
+Bohot kuch hai bolne ko,  
+par abhi ke liye itna hi kaafi hai.  
+Ye sab meri feelings ka sirf 30% hai 🥹  
+baaki 70% kabhi aur 🫶  
+
+Bas itna hi kehna hai —  
+I LOVE YOUUUUUUUUUUUUU 🥹❤️🫶
+  </p>
+
+  <div class="signature">
+    — Someone who cares, Samridhi 🌸
   </div>
+</div>
+
+<script>
+setInterval(() => {
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerHTML = "💖";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = (16 + Math.random() * 18) + "px";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 7000);
+}, 350);
+</script>
+
 </body>
 </html>
